@@ -10,6 +10,7 @@ import edu.colorado.phet.capacitorlab.model.Voltmeter;
 import edu.colorado.phet.capacitorlab.model.World;
 import edu.colorado.phet.capacitorlab.view.meters.VoltmeterProbeNode.NegativeVoltmeterProbeNode;
 import edu.colorado.phet.capacitorlab.view.meters.VoltmeterProbeNode.PositiveVoltmeterProbeNode;
+import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.umd.cs.piccolo.PNode;
 
 /**
@@ -28,7 +29,7 @@ public class VoltmeterView {
     private final VoltmeterProbeNode positiveProbeNode, negativeProbeNode;
     private final ProbeWireNode positiveWireNode, negativeWireNode;
     
-    public VoltmeterView( Voltmeter voltmeter, World world, ModelViewTransform mvt, PNode dragBoundsNode, boolean dev ) {
+    public VoltmeterView( final Voltmeter voltmeter, World world, ModelViewTransform mvt, PNode dragBoundsNode, boolean dev ) {
         bodyNode = new VoltmeterBodyNode( voltmeter, dragBoundsNode );
         positiveProbeNode = new PositiveVoltmeterProbeNode( voltmeter, world, mvt );
         negativeProbeNode = new NegativeVoltmeterProbeNode( voltmeter, world, mvt );
@@ -36,18 +37,20 @@ public class VoltmeterView {
                 bodyNode.getPositiveConnectionOffset(), positiveProbeNode.getConnectionOffset(), CLPaints.VOLTMETER_POSITIVE_WIRE );
         negativeWireNode = new ProbeWireNode( bodyNode, negativeProbeNode, BODY_CONTROL_POINT_OFFSET, PROBE_CONTROL_POINT_OFFSET, 
                 bodyNode.getNegativeConnectionOffset(), negativeProbeNode.getConnectionOffset(), CLPaints.VOLTMETER_NEGATIVE_WIRE );
+        
+        voltmeter.addVisibleObserver( new SimpleObserver() {
+            public void update() {
+                setVisible( voltmeter.isVisible() );
+            }
+        } );
     }
     
-    public void setVisible( boolean visible ) {
+    private void setVisible( boolean visible ) {
         bodyNode.setVisible( visible );
         positiveProbeNode.setVisible( visible );
         negativeProbeNode.setVisible( visible );
         positiveWireNode.setVisible( visible );
         negativeWireNode.setVisible( visible );
-    }
-    
-    public boolean isVisible() {
-        return bodyNode.getVisible();
     }
     
     public PNode getBodyNode() {
