@@ -1,4 +1,6 @@
-11/2/10 first pass at voltmeter (displays plate voltage)
+11/2/10 control visibility of voltmeter and E-field detector in model
+11/2/10 add getVoltageBetween to circuit model (needs to be properly implemented)
+11/2/10 first pass at voltmeter
 11/2/10 add zoom control to E-field detector
 11/2/10 EFieldDetectorView was getting too large, move body and probe to separate files
 11/2/10 generalize wire that connects a probe to a meter
